# Navi

./: LICENSE  README.md  pyproject.toml
navi/: bot.py  cogs_list.py
navi/cogs/: admin.py  weather.py
