[tool.poetry]
name = "navi"
version = "0.0.1"
description = "Personal assistant"
authors = ["Andrew Yoon <andrewy563@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.19.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bot = "navi.bot:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
